; ModuleID = '/home/carl/AnghaBench/mpv/video/out/gpu/extr_ra.c_ra_tex_create.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/gpu/extr_ra.c_ra_tex_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ra_tex = type { i32 }
%struct.ra = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { {}* }
%struct.ra_tex_params = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.ra_tex* @ra_tex_create(%struct.ra* %0, %struct.ra_tex_params* %1) #0 {
  %3 = alloca %struct.ra*, align 8
  %4 = alloca %struct.ra_tex_params*, align 8
  store %struct.ra* %0, %struct.ra** %3, align 8
  store %struct.ra_tex_params* %1, %struct.ra_tex_params** %4, align 8
  %5 = load %struct.ra*, %struct.ra** %3, align 8
  %6 = getelementptr inbounds %struct.ra, %struct.ra* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = bitcast {}** %8 to %struct.ra_tex* (%struct.ra*, %struct.ra_tex_params*)**
  %10 = load %struct.ra_tex* (%struct.ra*, %struct.ra_tex_params*)*, %struct.ra_tex* (%struct.ra*, %struct.ra_tex_params*)** %9, align 8
  %11 = load %struct.ra*, %struct.ra** %3, align 8
  %12 = load %struct.ra_tex_params*, %struct.ra_tex_params** %4, align 8
  %13 = call %struct.ra_tex* %10(%struct.ra* %11, %struct.ra_tex_params* %12)
  ret %struct.ra_tex* %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
